#111 Fix abstract and extra field spacing.

--- a/src/scss/components/_editor.scss
+++ b/src/scss/components/_editor.scss
@@ -18,7 +18,7 @@
 
 		&.abstract,
 		&.extra {
-			margin-top: $space-lg - $space-min;
+			margin-top: $space-lg;
 		}
 	}
 
